--- a/server/localhost/index.html
+++ b/server/localhost/index.html
@@ -23,8 +23,8 @@
 		<div class="header" id="header">
             <div class="header_logo"></div>
             <div class="header_title">
-				<span class="header_title_text">Purrbox</span>
-				<span class="header_ver">v1.0.0</span>
+				<span class="header_title_text" id="app_name">Purrbox</span>
+				<span class="header_ver" id="app_version"></span>
 				<span class="header_slogan">Node.js Virtual Hosting and Development Platform</span>
 			</div>
 			<div class="authenticated_user">
