--- a/server/localhost/_error_pages/vhost_error.html
+++ b/server/localhost/_error_pages/vhost_error.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
         <link rel="stylesheet" href="/css/common.css">
-
     </head>
     <body>
         <!-- Page Header -->
@@ -16,7 +15,7 @@
             <div class="header_logo"></div>
             <div class="header_title">
 				<span class="header_title_text">Purrbox</span>
-				<span class="header_ver">v1.0.0</span>
+				<span class="header_ver"></span>
 				<span class="header_slogan">Node.js Virtual Hosting and Development Platform</span>
 			</div>
         </div>
