Update help documentation

--- a/server/localhost/help/documents/1_Getting_Started/1-02_System_Overview.html
+++ b/server/localhost/help/documents/1_Getting_Started/1-02_System_Overview.html
@@ -15,6 +15,36 @@
 </p>
 <br />
 <img src="../../images/1_how_does_it_work.png" alt="" />
+<br /><br />
+<h3>Server Run Mode</h3>
+<p>
+	When starting the server, you will choose to run in '<blue>CommonJS</blue>' or '<blue>ECMAScript</blue>' modes. When choosing a mode, any backend or server side execution must adhere to '<blue>Node JS</blue>' requirements. Starting the server in either mode is done by the following:
+	<br /><br />
+	CommonJS mode:
+</p>
+<pre>
+node start_server.js
+</pre>
+<p>
+	ECMAScript mode:
+</p>
+<pre>
+node start_server.mjs
+</pre>
+<p>
+	File extension names for any backend or server side executions must have the filename extension.
+</p>
+<div class="grid2">
+	<div class="grid1_sub_head">Mode</div>
+	<div class="grid1_sub_head">Extension</div>
+	<div class="grid1_col">CommonJS</div>
+	<div class="grid1_col">.js</div>
+	<div class="grid1_col">ECMAScript</div>
+	<div class="grid1_col">.mjs</div>
+</div>
+<p>
+	Please refer to Node JS online documentation for more information.
+</p>
 <br />
 <br />
 <br />
