--- a/server/localhost/help/documents/1_Getting_Started/1-03_Server_File_Structure.html
+++ b/server/localhost/help/documents/1_Getting_Started/1-03_Server_File_Structure.html
@@ -43,7 +43,8 @@
      ├ server_start.js                  Server start script
      ├ LICENSE                          MIT license file
      ├ README.md                        GitHub README
-     ├ server_start.js                  Server start script
+     ├ server_start.js                  Server start script (CommonJS mode)
+     ├ server_start.mjs                 Server start script (ECMAScript mode)
      └ vhost_server.service             Linux systemd service example
 </pre>
 <br />
