--- a/server/localhost/help/documents/Appendix/A_Change_Logs.html
+++ b/server/localhost/help/documents/Appendix/A_Change_Logs.html
@@ -1,4 +1,7 @@
 <h1>Change Log Information</h1>
+<h3>v1.0.1</h3>
+Add ECMAScript mode<br />
+- Enable server process to run in 'CommonJS' or 'ECMAScript' mode via alternate server start option.<br />
 <h3>v1.0.0</h3>
 Management UI cleanup<br />
 - Many bug fixes to UI<br />
