--- a/server/localhost/help/documents/Introduction.html
+++ b/server/localhost/help/documents/Introduction.html
@@ -4,4 +4,7 @@
 	This platform aims to keep the administration to a minimum and allow users to get straight to things that are most important, project development. Servers should be set once and not have to return to configure the server for additional projects. Projects are intended to be decoupled from the server as much as possible. They are basically a folder with all of the web and application code but includes a configuration file which the server loads and maps accordingly. This management UI is designed to keep that configuration file in good working order. Project folders can easily be moved from one server to another without any need to reconfigure the destination server. This platform is full agnostic and does not have limitations to running on Linux, Windows, Mac or container environments. Limitations may be only related to node modules where they leverage specific OS functionality or specifically written for an OS.<br />
 	<br />
 	'<b>Getting Started</b>' contains a lot of information on how to setup your environment, server configurations, or logging setting for your projects, websites or web applications.
+	<br /><br />
+	<b>NOTE:</b><br />
+	This server can run in '<blue>CommonJS</blue>' or '<blue>ECMAScript</blue>' modes. When configuring to run in either mode, your backend code must follow what is supported in '<blue>Node JS</blue>'.
 </p>
