--- a/server/localhost/help/documents/Appendix/A_Change_Logs.html
+++ b/server/localhost/help/documents/Appendix/A_Change_Logs.html
@@ -1,29 +1,39 @@
 <h1>Change Log Information</h1>
 <h3>v1.0.1</h3>
-Add ECMAScript mode<br />
+<blue>Add ECMAScript mode</blue><br />
 - Enable server process to run in 'CommonJS' or 'ECMAScript' mode via alternate server start option.<br />
+<blue>VHost server process</blue><br />
+- Add process terminate signal catch<br />
+- Implement environment variable setting overrides for containerization<br />
+- Detect missing SSL certificates and create default ones<br />
+<blue>Logging</blue><br />
+- Add fields to log outputs<br />
+- Startup logging for container logs<br />
+<blue>Help documents added</blue><br />
+- Add advanced uses documents<br />
+<br />
 <h3>v1.0.0</h3>
-Management UI cleanup<br />
+<blue>Management UI cleanup</blue><br />
 - Many bug fixes to UI<br />
 - Reduced the number of management panels<br />
 - Rebuild DNS resolution management (DNS and Proxy mapping)<br />
 - Added sub mapping for website rules<br />
 - Added Admin URL testing and mapping information panel<br />
-Rebuild and improve matching logic<br />
+<blue>Rebuild and improve matching logic</blue><br />
 - Improve to performance<br />
 - Added Proxy map (domain + path) function<br />
 - Improved error pages<br />
 - Improved maintenance page functionality<br />
 - Improved website focusing content<br />
-Project configuration load and validation<br />
+<blue>Project configuration load and validation</blue><br />
 - Looks for invalid configuration and attempt to correct on load<br />
 - Problem detection report for Management UI status<br />
-VHost server process<br />
+<blue>VHost server process</blue><br />
 - Improved stack trace error captures and logging<br />
 - Added more server variables for use with API coding (helpers)<br />
 - Added more useful logging outputs, more Information<br />
 - Generates logs for project and website separately<br />
-Help documents added<br />
+<blue>Help documents added</blue><br />
 <br />
 <h3>Initial Build</h3>
 Core engine for matching FQDN only<br />
