change log update

--- a/server/localhost/help/documents/Appendix/A_Change_Logs.html
+++ b/server/localhost/help/documents/Appendix/A_Change_Logs.html
@@ -6,11 +6,18 @@
 - Add process terminate signal catch<br />
 - Implement environment variable setting overrides for containerization<br />
 - Detect missing SSL certificates and create default ones<br />
+- Correct header parsing in containers<br />
 <blue>Logging</blue><br />
 - Add fields to log outputs<br />
 - Startup logging for container logs<br />
+<blue>Management UI</blue><br />
+- Allow view of YAML files<br />
+- Correct HTTP and HTTPS links from resolve sections<br />
 <blue>Help documents added</blue><br />
 - Add advanced uses documents<br />
+- Updates to help documents<br />
+<blue>General</blue><br />
+- Various bug fixes in logging<br />
 <br />
 <h3>v1.0.0</h3>
 <blue>Management UI cleanup</blue><br />
